Traducido todo y ultimados detalles de diseño

--- a/src/app/sections/categories/game-league-card/game-league-card.component.html
+++ b/src/app/sections/categories/game-league-card/game-league-card.component.html
@@ -17,7 +17,7 @@
             <button class="btn btn-sm btn-warning mt-3 w-100 d-flex align-items-center justify-content-center gap-2"
               (click)="addToFavorites(league.id)" [disabled]="addedFavorites.has(league.id)">
               <i class="bi bi-star-fill"></i>
-              {{ addedFavorites.has(league.id) ? 'Favorito guardado' : 'Guardar favorito' }}
+              {{ addedFavorites.has(league.id) ? 'Favorite saved' : 'Save Favourite' }}
             </button>
 
           </div>
