--- a/src/app/sections/categories/game-match-card/game-match-card.component.html
+++ b/src/app/sections/categories/game-match-card/game-match-card.component.html
@@ -36,7 +36,7 @@
             <button class="btn btn-sm btn-warning mt-3 w-100 d-flex align-items-center justify-content-center gap-2"
               (click)="addToFavorites(match.id)" [disabled]="addedFavorites.has(match.id)">
               <i class="bi bi-star-fill"></i>
-              {{ addedFavorites.has(match.id) ? 'Favorito guardado' : 'Guardar favorito' }}
+              {{ addedFavorites.has(match.id) ? 'Favorite saved' : 'Save Favourite' }}
             </button>
 
           </div>
