--- a/src/app/sections/categories/game-series-card/game-series-card.component.html
+++ b/src/app/sections/categories/game-series-card/game-series-card.component.html
@@ -22,7 +22,7 @@
             <button class="btn btn-sm btn-warning w-100 d-flex align-items-center justify-content-center gap-2"
               (click)="addToFavorites(serie.id)" [disabled]="addedFavorites.has(serie.id)">
               <i class="bi bi-star-fill"></i>
-              {{ addedFavorites.has(serie.id) ? 'Favorito guardado' : 'Guardar favorito' }}
+              {{ addedFavorites.has(serie.id) ? 'Favorite saved' : 'Save favourite' }}
             </button>
 
           </div>
