--- a/src/app/sections/home/home.component.html
+++ b/src/app/sections/home/home.component.html
@@ -131,7 +131,7 @@
                       class="btn btn-sm btn-warning mt-3 w-100 d-flex align-items-center justify-content-center gap-2"
                       (click)="addToFavorites('player', p.id)">
                       <i class="bi bi-star-fill"></i>
-                      Save Favorite
+                      Save Favourite
                     </button>
 
                   </div>
@@ -163,7 +163,7 @@
                       class="btn btn-sm btn-warning mt-3 w-100 d-flex align-items-center justify-content-center gap-2"
                       (click)="addToFavorites('team', p.id)">
                       <i class="bi bi-star-fill"></i>
-                      Save Favorite
+                      Save Favourite
                     </button>
                   </div>
                 </div>
@@ -210,7 +210,7 @@
                 <button class="btn btn-sm btn-warning mt-3 w-100 d-flex align-items-center justify-content-center gap-2"
                   (click)="addToFavorites('match', p.id)">
                   <i class="bi bi-star-fill"></i>
-                  Save Favorite
+                  Save Favourite
                 </button>
               </div>
               }
@@ -238,7 +238,7 @@
         <div class="col-12 col-md-4">
           <div
             class="reward-card bg-secondary p-4 rounded text-center shadow-sm border border-info h-100 d-flex flex-column justify-content-center">
-            <h4 class="text-warning mb-3">🆕 Sign Up</h4>
+            <h4 class="text-warning mb-3">⭐ Star badge</h4>
             <p class="mb-0 text-light fw-semibold">For signing up on the platform</p>
           </div>
         </div>
