--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -6,7 +6,7 @@
       <a class="navbar-brand d-flex align-items-center me-3" routerLink="/">
         <img src="assets/images/RJK-logo.png" alt="Logo RJK SCORE" class="brand-logo" />
       </a>
-      <span class="footer-text">CC BY 4.0 International License</span>
+      <span class="footer-text">CC BY-SA 4.0 International License</span>
     </div>
 
     <!-- Menú de enlaces -->
